--- a/fonts/flaticon/font/flaticon.html
+++ b/fonts/flaticon/font/flaticon.html
@@ -420,6 +420,10 @@
         <div class="glyph"><div class="glyph-icon flaticon-ambulance"></div>
             <div class="class-name">.flaticon-ambulance</div>
             <div class="author-name">Author: <a data-file="006-ambulance" href="http://www.freepik.com">Freepik</a> </div> 
+        </div>   
+        <div class="glyph"><div class="glyph-icon flaticon-battery"></div>
+            <div class="class-name">.flaticon-battery</div>
+            <div class="author-name">Author: <a data-file="007-battery" href="http://www.freepik.com">Freepik</a> </div> 
         </div>        
         
         <div class="glyph"><div class="glyph-icon flaticon-pharmacy"></div>
