--- a/index.html
+++ b/index.html
@@ -1,8 +1,110 @@
 <!DOCTYPE html>
 <html lang="en">
-<!--#include virtual="components/head.html" -->
+<head>
+  <title>Everlit - Free Bootstrap 4 Template by Colorlib</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,700" rel="stylesheet">
+
+  <link rel="icon" href="images/everlit.ico" type="image/x-icon">
+  <link rel="stylesheet" href="css/open-iconic-bootstrap.min.css">
+  <link rel="stylesheet" href="css/animate.css">
+  <link rel="stylesheet" href="css/font-awesome.min.css">
+
+  <link rel="stylesheet" href="css/owl.carousel.min.css">
+  <link rel="stylesheet" href="css/owl.theme.default.min.css">
+  <link rel="stylesheet" href="css/magnific-popup.css">
+
+  <link rel="stylesheet" href="css/aos.css">
+
+  <link rel="stylesheet" href="css/ionicons.min.css">
+
+  <link rel="stylesheet" href="css/bootstrap-datepicker.css">
+  <link rel="stylesheet" href="css/jquery.timepicker.css">
+
+
+  <link rel="stylesheet" href="css/flaticon.css">
+  <link rel="stylesheet" href="css/icomoon.css">
+  <link rel="stylesheet" href="css/style.css">
+</head>
+
 <body>
-<!--#include virtual="components/navbar.html" -->
+<!--NAVBAR -->
+
+
+
+  <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
+    <div class="container">
+      <a class="navbar-brand" href="index.html"> 
+        <div class="brand-content">
+            <img src="./images/everlit.png" alt="everlit icon" style="height: 60px; width: auto;">
+            <div class="brand-texts">
+                <span class="brand-name">Everlit</span>
+                <span class="brand-tagline">Let there be light...</span>
+            </div>
+        </div>
+    </a>       
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav"
+        aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="oi oi-menu"></span> Menu
+      </button>
+
+      <div class="collapse navbar-collapse" id="ftco-nav">
+        <ul class="navbar-nav ml-auto" style="justify-content: center; margin-right: auto; margin-left: auto;">
+          <li class="nav-item"><a href="index.html" class="nav-link main-menu">Home</a></li>
+		  <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle main-menu" href="catalogue.html" id="navbarDropdown" role="button" data-toggle="dropdown"
+              aria-haspopup="true" aria-expanded="false">
+            Store
+          </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item" href="catalogue.html">Catalogue</a>
+              <a class="dropdown-item" href="storefront.html">Storefront</a>
+              <a class="dropdown-item" href="local.html">Local</a>
+              <a class="dropdown-item" href="donate.html">Donate</a>
+            </div>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle main-menu" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+              aria-haspopup="true" aria-expanded="false">
+            Glow-Up</a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item" href="biopulsar.html">Biopulsar</a>
+              <a class="dropdown-item" href="success.html">Success</a>
+            </div>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle main-menu" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+              aria-haspopup="true" aria-expanded="false">
+              Society
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item" href="charities.html">Charities & Events</a>
+              <a class="dropdown-item" href="market.html">Market</a>
+              <a class="dropdown-item" href="newsletter.html">Newsletter</a>
+            </div>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle main-menu" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+              aria-haspopup="true" aria-expanded="false">
+              Health
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item" href="articles.html">Health Articles</a>
+              <a class="dropdown-item" href="nutrition.html">Nutrition</a>
+              <a class="dropdown-item" href="herbals.html">Herbals</a>
+              <a class="dropdown-item" href="lifestyle.html">Lifestyle</a>
+            </div>
+          </li>
+        </ul>
+        <ul class="navbar-nav ml-auto main-menu" style="justify-content: center; margin-right: auto; margin-left: auto;">
+          <li class="nav-item cta"><a href="https://calendly.com/everlit" class="nav-link"><span>Make an Appointment</span></a></li>
+        </ul>
+
+      </div>
+    </div>
+  </nav>
 
   <!-- END nav -->
 
@@ -24,73 +126,57 @@
       <div class="row no-gutters">
         <div class="col-md-4 ftco-animate py-5 nav-link-wrap">
           <div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist" aria-orientation="vertical">
-            <a class="nav-link px-4 active" id="v-pills-master-tab" data-toggle="pill" href="#v-pills-master" role="tab"
-              aria-controls="v-pills-master" aria-selected="true"><span class="mr-3 flaticon-cardiogram"></span>
-              Colour Therapy</a>
 
-            <a class="nav-link px-4" id="v-pills-buffet-tab" data-toggle="pill" href="#v-pills-buffet" role="tab"
-              aria-controls="v-pills-buffet" aria-selected="false"><span class="mr-3 flaticon-neurology"></span>
+
+            <a class="nav-link px-4 active" id="v-pills-buffet-tab" data-toggle="pill" href="#v-pills-buffet" role="tab"
+              aria-controls="v-pills-buffet" aria-selected="true"><span class="mr-3 flaticon-neurology"></span>
               Biopulsar Reflexograph</a>
 
             <a class="nav-link px-4" id="v-pills-fitness-tab" data-toggle="pill" href="#v-pills-fitness" role="tab"
-              aria-controls="v-pills-fitness" aria-selected="false"><span class="mr-3 flaticon-stethoscope"></span>
+              aria-controls="v-pills-fitness" aria-selected="false"><span class="mr-3 flaticon-vision"></span>
               Chromalight</a>
 
             <a class="nav-link px-4" id="v-pills-reception-tab" data-toggle="pill" href="#v-pills-reception" role="tab"
-              aria-controls="v-pills-reception" aria-selected="false"><span class="mr-3 flaticon-tooth"></span>
+              aria-controls="v-pills-reception" aria-selected="false"><span class="mr-3 flaticon-cardiogram"></span>
               Healy</a>
 
-            <a class="nav-link px-4" id="v-pills-sea-tab" data-toggle="pill" href="#v-pills-sea" role="tab"
-              aria-controls="v-pills-sea" aria-selected="false"><span class="mr-3 flaticon-vision"></span>
-              Aura</a>
-
-            <a class="nav-link px-4" id="v-pills-spa-tab" data-toggle="pill" href="#v-pills-spa" role="tab"
-              aria-controls="v-pills-spa" aria-selected="false"><span class="mr-3 flaticon-ambulance"></span>
-              Energy</a>
           </div>
         </div>
         <div class="col-md-8 ftco-animate p-4 p-md-5 d-flex align-items-center">
 
           <div class="tab-content pl-md-5" id="v-pills-tabContent">
 
-            <div class="tab-pane fade show active py-5" id="v-pills-master" role="tabpanel"
-              aria-labelledby="v-pills-master-tab">
-              <span class="icon mb-3 d-block flaticon-cardiogram"></span>
-              <h2 class="mb-4">Colour Therapy</h2>
-              <p>Colour is awesome</p>
-              <p>Hi my name is Tya, let me tell you all about colour!</p>
-              <p><a href="#" class="btn btn-primary">Learn More</a></p>
-            </div>
 
-            <div class="tab-pane fade py-5" id="v-pills-buffet" role="tabpanel" aria-labelledby="v-pills-buffet-tab">
+            <div class="tab-pane fade show active py-5" id="v-pills-buffet" role="tabpanel" aria-labelledby="v-pills-buffet-tab">
               <span class="icon mb-3 d-block flaticon-neurology"></span>
               <h2 class="mb-4">Biopulsar Reflexograph</h2>
-              <p>Biopulsar is the best!&nbsp;</p>
-              <p>I scan your soul ....&nbsp; &nbsp;</p>
-              <p><a href="#" class="btn btn-primary">Learn More</a></p>
+              <p>&nbsp;The Biopulsar-Reflexograph® is based on the latest computer technology combined with the scientific basis of the reflex-zone and meridian teachings. The hand sensor is a refined receiver for biomedical signals, which are taken from the reflex zones of the right hand's palm. The absorption of the signals is done by putting the hand on a set of gold plated sensor pegs furnished on an electronic circuit board.</p>
+              <p>&nbsp;Opposite to the Kirlian photography method that works with high frequencies, only low frequency currents are used on the Biopulsar for the measurements of the skin resistance.</p>
+              <p>The Biopulsar-Reflexograph® hand sensor has 143 biomedical sensors, and scanning is done through 49 reflex zones. The measuring is in real-time, giving an accurate assessment of the state of health of the whole body. &nbsp;</p>
+              <p>Biopulsar biofeedback technology monitors and measures physical states such as muscle tone, skin temperature, skin perspiration, brainwave activity and other physical conditions.&nbsp;</p>
+              <p>Moreover, the Biopulsar’s specialized features include accurate colour display of the total body aura (showing over 90% of the human aura). The graph analysis shows the energy of an organ, whereas colour shows how the vitality is being used. Using the Biopulsar’s detailed features gives you the feedback necessary to help prevent mental or physical problems. &nbsp;</p>
+              <p>* These claims have not been evaluated or approved by the FDA, or Health Canada. All Biopulsar consultations are for educational purposes only, and do not replace advice from a Health Canada approved medical practitioner. </p>
+              <p>&nbsp;Any ideas regarding diagnosis, or medical advice should be followed up with your family doctor.</p>
             </div>
 
             <div class="tab-pane fade py-5" id="v-pills-fitness" role="tabpanel" aria-labelledby="v-pills-fitness-tab">
-              <span class="icon mb-3 d-block flaticon-stethoscope"></span>
+              <span class="icon mb-3 d-block flaticon-vision"></span>
               <h2 class="mb-4">Chromalight</h2>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nesciunt voluptate, quibusdam sunt iste
-                dolores consequatur</p>
-              <p>Inventore fugit error iure nisi reiciendis fugiat illo pariatur quam sequi quod iusto facilis officiis
-                nobis sit quis molestias asperiores rem, blanditiis! Commodi exercitationem vitae deserunt qui nihil ea,
-                tempore et quam natus quaerat doloremque.</p>
-              <p><a href="#" class="btn btn-primary">Learn More</a></p>
+              <p>Chromalight® is a holistic therapy device developed by Martina Gruber, a Medical Intuitive from Germany, who also developed the Biopulsar-Reflexograph®Biofeedback System together with Dr. Balaji Tambe, an Ayurvedic Practitioner from India.</p>
+              <p>Chromalight® Colour Therapy is a combination of various sciences–utilizing light therapy and the stimulation of reflex zones to support the body's internal mechanisms (amplifying the healing process on various levels). The Chromalive Colour Therapy Penlight allows for a simple and effective method for treating various symptoms using a non-invasive and concise colour radiation directly onto a specific reflex zone.</p>
+              <p>To understand the effectiveness of Chromalight® Colour Therapy, one must realize that intelligence exists within the body and beyond human comprehension. Every cell at the DNA level communicates with other cells in the body through a sophisticated language of colour light. By using the universal language of colour, imbalances within the body–which exist at the molecular level–can restore health to each cell.&nbsp;</p>
+              <p>&nbsp;Chromalight® Colour Therapy is an advanced treatment that can improve one's overall general wellbeing by balancing the body's natural energy frequencies. Chromalight® Colour Therapy helps to restore mental, emotional and physical equilibrium. In doing so, a variety of skin conditions such as irregularity of colour (brown and red spots), poor skin texture, blemishes, skin damage due to sun exposure as well as signs of aging, can diminish.</p>
+              <p>Colour Therapy's non-invasive treatments have been shown to: • Support body, mind &amp; spirit balance • Increase organ vitality • Improve skin circulation • Smooth skin texture (lift aged and tired skin and reduce wrinkles) • Increase elasticity of face, promoting a youthful appearance • Reduce blemishes and spots • Increase radiance!&nbsp;</p>
             </div>
 
             <div class="tab-pane fade py-5" id="v-pills-reception" role="tabpanel"
               aria-labelledby="v-pills-reception-tab">
-              <span class="icon mb-3 d-block flaticon-tooth"></span>
+              <span class="icon mb-3 d-block flaticon-cardiogram"></span>
               <h2 class="mb-4">Healy</h2>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nesciunt voluptate, quibusdam sunt iste
-                dolores consequatur</p>
-              <p>Inventore fugit error iure nisi reiciendis fugiat illo pariatur quam sequi quod iusto facilis officiis
-                nobis sit quis molestias asperiores rem, blanditiis! Commodi exercitationem vitae deserunt qui nihil ea,
-                tempore et quam natus quaerat doloremque.</p>
-              <p><a href="#" class="btn btn-primary">Learn More</a></p>
+              <p>Healy is the worlds first wearable microcurrent medical de­vice which offers you applications to help you stay fit, and bioenergetically regenerate and reduce pain. It is designed to support you in stressful situations during the day, help you recover more easily and find peace in the evening.&nbsp;</p>
+              <p>The Healy Device can help you to increase your vitality to improve the flow of your energy reserves and to activate your energy reservoirs. It is used for local relief of acute, chronic, and arthritis pain and musc­le soreness due to overexertion.&nbsp;</p>
+              <p>The Healy Medical Device also has non-medical applications that use indi­vidualized frequen cies to help balance your mind and body and relieve stress.</p>
+<p>&nbsp;</p>
             </div>
 
             <div class="tab-pane fade py-5" id="v-pills-sea" role="tabpanel" aria-labelledby="v-pills-sea-tab">
@@ -122,9 +208,9 @@
 
   <section class="ftco-section">
     <div class="container">
-      <div class="row justify-content-center mb-5 pb-3">
+      <div class="row justify-content-center mb-2 pb-3">
         <div class="col-md-7 heading-section ftco-animate text-center">
-          <h2 class="mb-4">Our Products</h2>
+          <h2 class="">Our Products</h2>
         </div>
       </div>
       <div class="row">
@@ -219,11 +305,14 @@
           </div> <!-- .flip-container -->
         </div>
       </div>
+      <div class="row justify-content-center mb-2 pb-3">
+        <div class="col-md-7 heading-section ftco-animate text-center">
+          <p><a href="catalogue.html"><em>Click here to view our complete catalogue</em></a></p>
+        </div>
+      </div>
       <div class="row">
         <div class="col-md-9 ftco-animate">
-          <h4>We offer the best results</h4>
-          <p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a
-            paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
+          <h4>&nbsp;</h4>
         </div>
       </div>
     </div>
@@ -296,35 +385,16 @@
             <h2 class="ftco-heading-2">Everlit</h2>
             <p>Let there be light.</p>
             <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
-              <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
-              <li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
-              <li class="ftco-animate"><a href="#"><span class="icon-instagram"></span></a></li>
+              <li class="ftco-animate"><a href="https://instagram.com/everlitauracare"><span class="icon-instagram"></span></a></li>
             </ul>
           </div>
         </div>
         <div class="col-md">
           <div class="ftco-footer-widget mb-4 ml-md-5">
-            <h2 class="ftco-heading-2">Information</h2>
-            <ul class="list-unstyled">
-              <li><a href="#" class="py-2 d-block">Appointments</a></li>
-              <li><a href="#" class="py-2 d-block">Our Specialties</a></li>
-              <li><a href="#" class="py-2 d-block">Why Choose us</a></li>
-              <li><a href="#" class="py-2 d-block">Our Services</a></li>
-              <li><a href="#" class="py-2 d-block">health Tips</a></li>
-            </ul>
           </div>
         </div>
         <div class="col-md">
           <div class="ftco-footer-widget mb-4">
-            <h2 class="ftco-heading-2">Site Links</h2>
-            <ul class="list-unstyled">
-              <li><a href="#" class="py-2 d-block">Home</a></li>
-              <li><a href="#" class="py-2 d-block">Glow Up</a></li>
-              <li><a href="#" class="py-2 d-block">Society</a></li>
-              <li><a href="#" class="py-2 d-block">Health</a></li>
-              <li><a href="#" class="py-2 d-block">Shop</a></li>
-              <li><a href="#" class="py-2 d-block">Contact</a></li>
-            </ul>
           </div>
         </div>
         <div class="col-md">
