--- a/index.html
+++ b/index.html
@@ -154,9 +154,10 @@
               <p>&nbsp;Opposite to the Kirlian photography method that works with high frequencies, only low frequency currents are used on the Biopulsar for the measurements of the skin resistance.</p>
               <p>The Biopulsar-Reflexograph® hand sensor has 143 biomedical sensors, and scanning is done through 49 reflex zones. The measuring is in real-time, giving an accurate assessment of the state of health of the whole body. &nbsp;</p>
               <p>Biopulsar biofeedback technology monitors and measures physical states such as muscle tone, skin temperature, skin perspiration, brainwave activity and other physical conditions.&nbsp;</p>
-              <p>Moreover, the Biopulsar’s specialized features include accurate colour display of the total body aura (showing over 90% of the human aura). The graph analysis shows the energy of an organ, whereas colour shows how the vitality is being used. Using the Biopulsar’s detailed features gives you the feedback necessary to help prevent mental or physical problems. &nbsp;</p>
+              <p>Moreover, the Biopulsar’s specialized features include accurate colour display of the total body aura (showing over 90% of the human aura). The graph analysis shows the energy of an organ, whereas colour shows how the vitality is being used. Using the Biopulsar’s detailed features gives you the feedback necessary to help prevent dis-ease. &nbsp;</p>
               <p>* These claims have not been evaluated or approved by the FDA, or Health Canada. All Biopulsar consultations are for educational purposes only, and do not replace advice from a Health Canada approved medical practitioner. </p>
               <p>&nbsp;Any ideas regarding diagnosis, or medical advice should be followed up with your family doctor.</p>
+              <p>IMPORTANT: To ensure the most acccurate scan please be  well hydrated prior to your appointment.&nbsp;</p>
             </div>
 
             <div class="tab-pane fade py-5" id="v-pills-fitness" role="tabpanel" aria-labelledby="v-pills-fitness-tab">
@@ -165,8 +166,16 @@
               <p>Chromalight® is a holistic therapy device developed by Martina Gruber, a Medical Intuitive from Germany, who also developed the Biopulsar-Reflexograph®Biofeedback System together with Dr. Balaji Tambe, an Ayurvedic Practitioner from India.</p>
               <p>Chromalight® Colour Therapy is a combination of various sciences–utilizing light therapy and the stimulation of reflex zones to support the body's internal mechanisms (amplifying the healing process on various levels). The Chromalive Colour Therapy Penlight allows for a simple and effective method for treating various symptoms using a non-invasive and concise colour radiation directly onto a specific reflex zone.</p>
               <p>To understand the effectiveness of Chromalight® Colour Therapy, one must realize that intelligence exists within the body and beyond human comprehension. Every cell at the DNA level communicates with other cells in the body through a sophisticated language of colour light. By using the universal language of colour, imbalances within the body–which exist at the molecular level–can restore health to each cell.&nbsp;</p>
-              <p>&nbsp;Chromalight® Colour Therapy is an advanced treatment that can improve one's overall general wellbeing by balancing the body's natural energy frequencies. Chromalight® Colour Therapy helps to restore mental, emotional and physical equilibrium. In doing so, a variety of skin conditions such as irregularity of colour (brown and red spots), poor skin texture, blemishes, skin damage due to sun exposure as well as signs of aging, can diminish.</p>
-              <p>Colour Therapy's non-invasive treatments have been shown to: • Support body, mind &amp; spirit balance • Increase organ vitality • Improve skin circulation • Smooth skin texture (lift aged and tired skin and reduce wrinkles) • Increase elasticity of face, promoting a youthful appearance • Reduce blemishes and spots • Increase radiance!&nbsp;</p>
+              <p>Chromalight® Colour Therapy is an advanced treatment that can improve one's overall general wellbeing by balancing the body's natural energy frequencies. Chromalight® Colour Therapy helps to restore mental, emotional and physical equilibrium. In doing so, a variety of skin conditions such as irregularity of colour (brown and red spots), poor skin texture, blemishes, skin damage due to sun exposure as well as signs of aging, can diminish.</p>
+              <p>Chromalight Therapy's non-invasive treatments have been shown to:&nbsp;</p>
+              <ul>
+				  <li>Support body, mind &amp; spirit balance </li>
+				  <li>Increase organ vitality </li>
+				  <li>Improve skin circulation </li>
+				  <li>Smooth skin texture (lift aged and tired skin and reduce wrinkles)y </li>
+				  <li>Increase elasticity of face, promoting a youthful appearance</li>
+				  <li>Reduce blemishes and spots</li>
+				  <li>Increase radiance!</li></ul>
             </div>
 
             <div class="tab-pane fade py-5" id="v-pills-reception" role="tabpanel"
@@ -403,8 +412,7 @@
             <div class="block-23 mb-3">
               <ul>
                 <li><span class="icon icon-map-marker"></span><span class="text">Bridgewater, Nova Scotia, Canada</span></li>
-                <li><a href="#"><span class="icon icon-phone"></span><span class="text">+1 902 223 8069</span></a></li>
-                <li><a href="#"><span class="icon icon-envelope"></span><span
+                <li><a href="mailto:info@everlit.care"><span class="icon icon-envelope"></span><span
                       class="text">info@everlit.care</span></a></li>
               </ul>
             </div>
