--- a/catalogue.html
+++ b/catalogue.html
@@ -109,10 +109,10 @@
   <!-- END nav -->
 
 <!-- Product Container -->
-<div class="container mt-4">
+<div class="container mt-0">
     <div class="row justify-content-center mb-5 pb-3">
         <div class="col-md-7 heading-section ftco-animate text-center">
-            <h2 class="mb-4">Our Products</h2>
+            <h2 class="mt-4">Our Products</h2>
         </div>
     </div>
     <div class="row" id="productsContainer">
@@ -132,58 +132,135 @@ function loadProducts() {
 					"category": "Colour Energy"
 				},
 				{
+					"id": "10",
+					"name": "Crystal Liquid Deoderant",
+					"description": "Ethically made and packaged in Vancouver, Canada, using the finest ingredients from around the world. Never tested on animals, no preservatives, no chemicals, no parabens or fragrances. Suitable for all skin & hair types.",
+					"image": "./images/deoderant.webp",
+					"category": "Colour Energy"
+				},
+				{
+					"id": "11",
+					"name": "Medieval Thymes Spray",
+					"description": "The essential oils used in this legendary recipe are rumoured to be the same ones used by thieves as a means of protection while they looted the weak, during the time of the Black Plague. Add to your body and cleansing rituals.",
+					"image": "./images/medieval-spray.webp",
+					"category": "Colour Energy"
+				},
+				{
+					"id": "11",
+					"name": "Immune Booster Roller",
+					"description": "This light essense (roller ball) helps with the expulsion of toxins, fat and cellulite. Relieves stomach cramps, constipation and mild indigestion. Add to a bath with salts for a total detoxifying experience.",
+					"image": "./images/immune-roller.webp",
+					"category": "Colour Energy"
+				},
+				{
+					"id": "11",
+					"name": "Detox & Digest Roller",
+					"description": "This light essense (roller ball) helps with the expulsion of toxins, fat and cellulite. Relieves stomach cramps, constipation and mild indigestion. Add to a bath with salts for a total detoxifying experience.",
+					"image": "./images/detox-roller.webp",
+					"category": "Colour Energy"
+				},
+				{
+					"id": "12", 
+					"name": "Red Light Roller",
+					"description": "These essences (roller balls) have been designed through an alchemy process using the healing power of crystalline structures, geometric patterns, cosmic vibrations, to open your energy centres so they are functioning actively, radiantly & strongly.",
+					"image": "./images/red-light.webp",
+					"category": "Colour Energy"
+				},
+				{
+					"id": "13", 
+					"name": "Orange Light Roller",
+					"description": "These essences (roller balls) have been designed through an alchemy process using the healing power of crystalline structures, geometric patterns, cosmic vibrations, to open your energy centres so they are functioning actively, radiantly & strongly.",
+					"image": "./images/orange-light.webp",
+					"category": "Colour Energy"
+				},
+				{
+					"id": "14", 
+					"name": "Yellow Light Roller",
+					"description": "These essences (roller balls) have been designed through an alchemy process using the healing power of crystalline structures, geometric patterns, cosmic vibrations, to open your energy centres so they are functioning actively, radiantly & strongly.",
+					"image": "./images/yellow-light.webp",
+					"category": "Colour Energy"
+				},
+				{
+					"id": "15", 
+					"name": "Green Light Roller",
+					"description": "These essences (roller balls) have been designed through an alchemy process using the healing power of crystalline structures, geometric patterns, cosmic vibrations, to open your energy centres so they are functioning actively, radiantly & strongly.",
+					"image": "./images/green-light.webp",
+					"category": "Colour Energy"
+				},
+				{
+					"id": "16", 
+					"name": "Blue Light Roller",
+					"description": "These essences (roller balls) have been designed through an alchemy process using the healing power of crystalline structures, geometric patterns, cosmic vibrations, to open your energy centres so they are functioning actively, radiantly & strongly.",
+					"image": "./images/blue-light.webp",
+					"category": "Colour Energy"
+				},
+				{
+					"id": "17", 
+					"name": "Indigo Light Roller",
+					"description": "These essences (roller balls) have been designed through an alchemy process using the healing power of crystalline structures, geometric patterns, cosmic vibrations, to open your energy centres so they are functioning actively, radiantly & strongly.",
+					"image": "./images/indigo-light.webp",
+					"category": "Colour Energy"
+				},
+				{
+					"id": "17", 
+					"name": "Violet Light Roller",
+					"description": "These essences (roller balls) have been designed through an alchemy process using the healing power of crystalline structures, geometric patterns, cosmic vibrations, to open your energy centres so they are functioning actively, radiantly & strongly.",
+					"image": "./images/violet-light.webp",
+					"category": "Colour Energy"
+				},
+				{
 					"id": "2",
 					"name": "Root Chakra Spray",
-					"description": "The concept behind these high powered Spiritual Sprays...",
+					"description": "The concept behind these high powered Spiritual Sprays are to remind the body's energy field of it's original \"colour\" blueprint. Restoring balance to imbalances, in turn our body, mind & spirit can return to a harmonic state.",
 					"image": "./images/red-spray.webp",
 					"category": "Colour Energy"
 				},
 				{
 					"id": "3",
 					"name": "Sacral Chakra Spray",
-					"description": "The concept behind these high powered Spiritual Sprays...",
+					"description": "The concept behind these high powered Spiritual Sprays are to remind the body's energy field of it's original \"colour\" blueprint. Restoring balance to imbalances, in turn our body, mind & spirit can return to a harmonic state.",
 					"image": "./images/orange-spray.webp",
 					"category": "Colour Energy"
 				},
 				{
 					"id": "4",
 					"name": "Solar Plexus Chakra Spray",
-					"description": "The concept behind these high powered Spiritual Sprays...",
+					"description": "The concept behind these high powered Spiritual Sprays are to remind the body's energy field of it's original \"colour\" blueprint. Restoring balance to imbalances, in turn our body, mind & spirit can return to a harmonic state.",
 					"image": "./images/yellow-spray.webp",
 					"category": "Colour Energy"
 				},
 				{
 					"id": "5",
 					"name": "Heart Chakra Spray",
-					"description": "The concept behind these high powered Spiritual Sprays...",
+					"description": "The concept behind these high powered Spiritual Sprays are to remind the body's energy field of it's original \"colour\" blueprint. Restoring balance to imbalances, in turn our body, mind & spirit can return to a harmonic state.",
 					"image": "./images/green-spray.webp",
 					"category": "Colour Energy"
 				},
 				{
 					"id": "6",
 					"name": "Throat Chakra Spray",
-					"description": "The concept behind these high powered Spiritual Sprays...",
+					"description": "The concept behind these high powered Spiritual Sprays are to remind the body's energy field of it's original \"colour\" blueprint. Restoring balance to imbalances, in turn our body, mind & spirit can return to a harmonic state.",
 					"image": "./images/blue-spray.webp",
 					"category": "Colour Energy"
 				},
 				{
 					"id": "7",
 					"name": "Third Eye Chakra Spray",
-					"description": "The concept behind these high powered Spiritual Sprays...",
+					"description": "The concept behind these high powered Spiritual Sprays are to remind the body's energy field of it's original \"colour\" blueprint. Restoring balance to imbalances, in turn our body, mind & spirit can return to a harmonic state..",
 					"image": "./images/indigo-spray.webp",
 					"category": "Colour Energy"
 				},
 				{
 					"id": "8",
 					"name": "Crown Chakra Spray",
-					"description": "The concept behind these high powered Spiritual Sprays...",
+					"description": "The concept behind these high powered Spiritual Sprays are to remind the body's energy field of it's original \"colour\" blueprint. Restoring balance to imbalances, in turn our body, mind & spirit can return to a harmonic state.",
 					"image": "./images/violet-spray.webp",
 					"category": "Colour Energy"
 				},
 				{
 					"id": "9",
 					"name": "While Light Spray",
-					"description": "The concept behind these high powered Spiritual Sprays...",
+					"description": "The concept behind these high powered Spiritual Sprays are to remind the body's energy field of it's original \"colour\" blueprint. Restoring balance to imbalances, in turn our body, mind & spirit can return to a harmonic state.",
 					"image": "./images/white-spray.webp",
 					"category": "Colour Energy"
 				},
