--- a/index.html
+++ b/index.html
@@ -124,7 +124,9 @@
   <section class="ftco-services">
     <div class="container">
       <div class="row no-gutters">
-        <div class="col-md-4 ftco-animate py-5 nav-link-wrap">
+        <div class="col-md-4 ftco-animate py-5 nav-link-wrap"> 
+		  <h2 class="active" style="text-align: center; color: white;">Our Modalities</h2>
+
           <div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist" aria-orientation="vertical">
 
 
@@ -317,11 +319,6 @@
       <div class="row justify-content-center mb-2 pb-3">
         <div class="col-md-7 heading-section ftco-animate text-center">
           <p><a href="catalogue.html"><em>Click here to view our complete catalogue</em></a></p>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-9 ftco-animate">
-          <h4>&nbsp;</h4>
         </div>
       </div>
     </div>
