--- a/catalogue.html
+++ b/catalogue.html
@@ -47,7 +47,7 @@
     </a>       
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav"
         aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="oi oi-menu"></span> Menu
+        <span class="oi oi-menu"></span> Menu 
       </button>
 
       <div class="collapse navbar-collapse" id="ftco-nav">
@@ -112,7 +112,7 @@
 <div class="container mt-0">
     <div class="row justify-content-center mb-5 pb-3">
         <div class="col-md-7 heading-section ftco-animate text-center">
-            <h2 class="mt-4">Our Products</h2>
+            <h2 class="mt-4">Our ProductS&nbsp;</h2>
         </div>
     </div>
     <div class="row" id="productsContainer">
@@ -127,7 +127,7 @@ function loadProducts() {
 				{
 					"id": "1",
 					"name": "Aura Cleanser",
-					"description": "Enhance Your Energy with Colour Energy’s High Frequency Electromagnetic Aura Purifier...",
+					"description": "Enhance Your Energy with Colour Energy’s High Frequency Electromagnetic Aura Purifier. This essence was specially created to help neutralize and cleanse areas where it is sprayed, including other people's energy and EMFs.",
 					"image": "./images/aura-cleanser.webp",
 					"category": "Colour Energy"
 				},
