--- a/catalogue.html
+++ b/catalogue.html
@@ -47,7 +47,7 @@
     </a>       
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav"
         aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="oi oi-menu"></span> Menu 
+        <span class="oi oi-menu"></span> Menu
       </button>
 
       <div class="collapse navbar-collapse" id="ftco-nav">
@@ -80,7 +80,7 @@
               Society
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="charities.html">Charities & Events</a>
+              <a class="dropdown-item" href="events.html">Events</a>
               <a class="dropdown-item" href="market.html">Market</a>
               <a class="dropdown-item" href="newsletter.html">Newsletter</a>
             </div>
