--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
               Society
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="charities.html">Charities & Events</a>
+              <a class="dropdown-item" href="events.html">Events</a>
               <a class="dropdown-item" href="market.html">Market</a>
               <a class="dropdown-item" href="newsletter.html">Newsletter</a>
             </div>
